Rename texture to tile and let it own the buffer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(
     window.cpp
     log.cpp
     shader.cpp
-    texture.cpp
+    tile.cpp
 )
 
 target_include_directories(alchimia PUBLIC .)
