Move update functions to a separate header

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(
     tile.cpp
     pixel.cpp
     pixel_api.cpp
+    update_functions.cpp
 )
 
 target_include_directories(alchimia PUBLIC .)
