Cleanup Pixel Updating and Static Variables (#4)
- Add a `pixel_api` class to make the implementations of the `update_*` functions simpler. These function are new free functions.
- Add a `world_settings` struct to store attributes such as gravity.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(
     shader.cpp
     tile.cpp
     pixel.cpp
+    pixel_api.cpp
+    update_functions.cpp
 )
 
 target_include_directories(alchimia PUBLIC .)
