Add a texture class and remove glad logic from tile class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(
 
     graphics/window.cpp
     graphics/shader.cpp
+    graphics/texture.cpp
 )
 
 target_include_directories(sandfall PUBLIC .)
