--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,27 +10,26 @@ find_package(glm CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 
-add_executable(
-    sandfall
-    sandfall.m.cpp
-    log.cpp
-    tile.cpp
-    pixel.cpp
-    update_functions.cpp
-    timer.cpp
-
-    graphics/window.cpp
-    graphics/shader.cpp
-    graphics/texture.cpp
+add_executable(sandfall
+               sandfall.m.cpp
+               log.cpp
+               tile.cpp
+               pixel.cpp
+               update_functions.cpp
+               timer.cpp
+           
+               graphics/window.cpp
+               graphics/shader.cpp
+               graphics/texture.cpp
 )
 
 target_include_directories(sandfall PUBLIC .)
 
-target_link_libraries(
-    sandfall PUBLIC
-    glfw
-    glad::glad
-    glm
-    fmt::fmt
-    imgui::imgui
+target_link_libraries(sandfall PUBLIC
+                      vendor
+                      glfw
+                      glad::glad
+                      glm
+                      fmt::fmt
+                      imgui::imgui
 )
