Move the setup imgui code to an RAII wrapper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(sandfall
                graphics/window.cpp
                graphics/shader.cpp
                graphics/texture.cpp
+               graphics/ui.cpp
 )
 
 target_include_directories(sandfall PUBLIC .)
