Let the UI consume mouse and keyboard events

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=781,97
+Pos=771,436
 Size=478,528
+Collapsed=1
+
+[Window][Editor]
+Pos=829,151
+Size=263,231
 Collapsed=0
 
