Add cereal as a dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
+find_package(cereal CONFIG REQUIRED)
 
 add_executable(sandfall
                sandfall.m.cpp
@@ -32,4 +33,5 @@ target_link_libraries(sandfall PUBLIC
                       glm
                       fmt::fmt
                       imgui::imgui
+                      cereal
 )
