Get building in 2023

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,11 +29,11 @@ add_executable(sandfall
 
 target_include_directories(sandfall PUBLIC .)
 
-target_link_libraries(sandfall PUBLIC
+target_link_libraries(sandfall PRIVATE
     vendor
     glfw
     glad::glad
-    glm
+    glm::glm
     imgui::imgui
-    cereal
+    cereal::cereal
 )
