--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,8 +21,10 @@ add_executable(sandfall
     editor.cpp
     mouse.cpp
 
+    graphics/buffer.cpp
     graphics/renderer.cpp
     graphics/player_renderer.cpp
+    graphics/render_context.cpp
     graphics/window.cpp
     graphics/shader.cpp
     graphics/texture.cpp
