Get a line renderer working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(sandfall
     graphics/renderer.cpp
     graphics/player_renderer.cpp
     graphics/render_context.cpp
+    graphics/shape_renderer.cpp
     graphics/window.cpp
     graphics/shader.cpp
     graphics/texture.cpp
