Line Renderer for Debugging (#54)
* Copy over the `shape_renderer` from sprocket, modified to work in this codebase.
* Add the ability to render instances of quad.
* Delete the `player_renderer` since it was just a rubbish quad renderer. Now all quads get rendered in a single draw call.
* Add an outline for each quad in the scene, but this is just temporary.
* The player is now rendered as a circle to match the collider.
* Implementing logic to generate rigid bodies from the pixel world will be much easier now that they can be rendered.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,8 +21,9 @@ add_executable(sandfall
     editor.cpp
     mouse.cpp
 
+    graphics/buffer.cpp
     graphics/renderer.cpp
-    graphics/player_renderer.cpp
+    graphics/shape_renderer.cpp
     graphics/window.cpp
     graphics/shader.cpp
     graphics/texture.cpp
