--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(cereal CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
+find_package(SFML COMPONENTS Network Graphics Window Audio System CONFIG )
 
 add_executable(sandfall
     sandfall.m.cpp
@@ -38,4 +39,5 @@ target_link_libraries(sandfall PRIVATE
     imgui::imgui
     cereal::cereal
     box2d::box2d
+    SFML::Network SFML::Graphics SFML::Window SFML::Audio SFML::System
 )
