--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
 
-add_subdirectory(core)
-
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
@@ -9,21 +7,25 @@ find_package(imgui CONFIG REQUIRED)
 find_package(cereal CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
 
-add_executable(game game.m.cpp)
-
-target_include_directories(game PUBLIC .)
-
-target_link_libraries(game PRIVATE
-    core
-    glm::glm
+add_library(core STATIC
+    buffer.cpp
+    renderer.cpp
+    shape_renderer.cpp
+    window.cpp
+    shader.cpp
+    texture.cpp
+    utility.cpp
+    mouse.cpp
+    world.cpp
+    pixel.cpp
+    explosion.cpp
+    update_rigid_bodies.cpp
+    serialisation.cpp
 )
 
-add_executable(editor editor.m.cpp)
+target_include_directories(core PUBLIC .)
 
-target_include_directories(editor PUBLIC .)
-
-target_link_libraries(editor PRIVATE
-    core
+target_link_libraries(core PRIVATE
     glfw
     glad::glad
     glm::glm
