Split Contact Listener and Player Class (#68)
* Turns out, you can only have one contact listener in box2d, so having the player entity be the listener doesn't make sense.
* Deleted `player_controller` and added `contact_listener` and `entity`. The goal here is to start supporting multiple entities.
* The `level` class now owns a player `entity` as well as a vector of other entities, and the game binary has a second copy of the player to demonstrate it working for now.
* The contact listener just does what the old logic does and applies to all entities, which will obviously change in the future.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(core STATIC
     renderer.cpp
     shape_renderer.cpp
     window.cpp
+    entity.cpp
     shader.cpp
     texture.cpp
     utility.cpp
