--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(cereal CONFIG REQUIRED)
 find_package(box2d CONFIG REQUIRED)
+find_package(freetype CONFIG REQUIRED)
 
 add_library(core STATIC
     buffer.cpp
@@ -35,4 +36,5 @@ target_link_libraries(core PRIVATE
     imgui::imgui
     cereal::cereal
     box2d::box2d
+    Freetype::Freetype
 )
